--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,15 +11,39 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
+
   color: #2a2626;
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
   line-height: 1.6em;
+
+  background-color: var(--light);
+}
+
+body::before {
+  position: absolute;
+
+  width: 100%;
+  height: 100vh;
+  min-height: 914px;
+
+  background-image: url("../images/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.1;
+
+  content: "";
 }
 
 h1,
 h2,
 h3 {
+  margin: 0;
+  padding: 0;
+
+  font-weight: 400;
   font-family: Neucha, sans-serif;
   line-height: 1.2em;
 }
@@ -36,8 +60,70 @@ h3 {
   font-size: 34px;
 }
 
-section {
+p {
+  margin-top: 0;
+}
+
+.btn {
+  display: inline-block;
+  padding: 12px 24px;
+
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.btn-primary {
+  color: var(--white);
+
+  background-color: var(--primary);
+}
+
+.btn-primary:hover {
+  background-color: #ea7600;
+}
+
+.column {
+  break-inside: avoid;
+}
+
+.columns-2 {
+  column-count: 2;
+  column-gap: 30px;
+}
+
+.header {
+  position: relative;
+}
+
+.header article {
+  position: absolute;
+  top: 555px;
+}
+
+.header h1 {
+  position: absolute;
+  z-index: 1;
+}
+
+.header img {
+  position: absolute;
+  top: 55px;
+  right: -270px;
+
+  height: 525px;
+}
+
+.header .btn {
+  margin-top: 1.5em;
+}
+
+.section {
   max-width: 1110px;
-  margin: auto;
-  padding: 100px;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+
+.text-primary {
+  color: var(--primary);
 }
